[project]
name = "monzo_py"
version = "1.0.1"
authors = [
  { name="Jake Martin", email="jake_martinn_@outlook.com" },
]
description = "A simple async python wrapper for the Monzo API, used primarily by the Monzo Home Assistant integration."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JakeMartin-ICL/monzo-py"
"Bug Tracker" = "https://github.com/JakeMartin-ICL/monzo-py/issues"